--- a/.github/workflows/docker-build.yml
+++ b/.github/workflows/docker-build.yml
@@ -3,7 +3,9 @@ name: Build and Push Docker Image
 on:
   push:
     branches:
-      - main
+      - main'
+  schedule:
+    - cron: '0 2 * * *'
 
 jobs:
   build-and-push:
